force-app/main/default/objects/Dog__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>How old are you in dog years?</description>
    <inlineHelpText>How old are you in dog years?</inlineHelpText>
    <label>What&apos;s your age in dog years?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>