force-app/main/default/objects/Dog__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <description>Tell us about you. Breed, favorite treat, bestest toy?</description>
    <inlineHelpText>Tell us about you. Breed, favorite treat, bestest toy?</inlineHelpText>
    <label>What kind of dog are you?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>