force-app/main/default/objects/Dog__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>What color or colors are you? Ask your person if you aren&apos;t sure.</description>
    <inlineHelpText>Most dogs are colorblind, so ask your person if you aren&apos;t sure.</inlineHelpText>
    <label>What color or colors are you?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Golden</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Gray</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Spotted</fullName>
            </value>
            <value>
                <fullName>Brindle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>