force-app/main/default/objects/Dog__c/fields/Dog_Trick__c.field-meta.xml
<CustomField>
    <fullName>Dog_Trick__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dog Trick</label>
    <referenceTo>Dog_Trick__c</referenceTo>
    <relationshipLabel>Dogs</relationshipLabel>
    <relationshipName>Dogs</relationshipName>
    <type>Lookup</type>
</CustomField>