force-app/main/default/objects/Dog__c/fields/Male_or_Female__c.field-meta.xml
<CustomField>
    <fullName>Male_or_Female__c</fullName>
    <label>Male or Female?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>