force-app/main/default/objects/Dog__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <description>Show us a picture of your dog!</description>
    <inlineHelpText>Upload a picture of your dog.</inlineHelpText>
    <label>Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>